<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.example.georges.firstapplication.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/SecondaryTextScreen"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:textAlignment="textEnd"
        android:textColor="#ee6f6f6f" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="15"
        android:minHeight="75dp"
        android:minWidth="375dp"
        android:textSize="20sp"
        android:id="@+id/TextScreen"
        android:backgroundTint="#aaaa"
        android:background="@android:color/darker_gray"
        android:textAlignment="center"
        android:textColor="#333333"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textCursorDrawable="@android:color/darker_gray" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextScreen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:id="@+id/FunctionScroll">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:text="@string/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:textSize="30sp"
                android:minWidth="90dp"
                android:minHeight="50dp"
                android:id="@+id/buttA"
                android:layout_weight="1" />

            <Button
                android:text="@string/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:textSize="30sp"
                android:minWidth="90dp"
                android:minHeight="50dp"
                android:id="@+id/buttS"
                android:layout_weight="1"
                android:textScaleX="2" />

            <Button
                android:text="@string/buttonMulti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:textSize="30sp"
                android:minWidth="90dp"
                android:minHeight="50dp"
                android:id="@+id/buttM"
                android:layout_weight="1" />

            <Button
                android:text="@string/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:textSize="30sp"
                android:minWidth="90dp"
                android:minHeight="50dp"
                android:id="@+id/buttD"
                android:layout_weight="1" />

            <Button
                android:text="@string/buttonPi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:textSize="30sp"
                android:minWidth="90dp"
                android:minHeight="50dp"
                android:id="@+id/buttPi"
                android:layout_weight="1" />

            <Button
                android:text="@string/buttonExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:textSize="30sp"
                android:minWidth="90dp"
                android:minHeight="50dp"
                android:id="@+id/buttExp"
                android:layout_weight="1" />

            <Button
                android:text="@string/buttonOBracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:textSize="30sp"
                android:minWidth="90dp"
                android:minHeight="50dp"
                android:id="@+id/buttOB"
                android:layout_weight="1" />

            <Button
                android:text="@string/buttonCBracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:textSize="30sp"
                android:minWidth="90dp"
                android:minHeight="50dp"
                android:id="@+id/buttCB"
                android:layout_weight="1" />

            <Button
                android:text="@string/buttonLn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:textSize="30sp"
                android:minWidth="90dp"
                android:minHeight="50dp"
                android:id="@+id/buttLn"
                android:layout_weight="1" />

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:text="@string/sr"
                android:onClick="playStress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:minWidth="110dp"
                android:id="@+id/stress"
                android:layout_weight="1" />

            <Button
                android:text="@string/help"
                android:onClick="playHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:minWidth="110dp"
                android:id="@+id/help"
                android:layout_weight="1" />

            <Button
                android:text="@string/clap"
                android:onClick="playClapping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:minWidth="110dp"
                android:id="@+id/button4"
                android:layout_weight="1" />

            <Button
                android:text="@string/FuckOff"
                android:onClick="playFuckOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:minWidth="110dp"
                android:id="@+id/FuckOff"
                android:layout_weight="1" />
            <Button
                android:text="@string/censor"
                android:onClick="playCensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b4f5f6"
                android:background="#0997d4"
                android:minWidth="110dp"
                android:id="@+id/censor"
                android:layout_weight="1" />
        </LinearLayout>
    </HorizontalScrollView>
    <Button
        android:text="@string/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/buttC"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/FunctionScroll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#0294d3"
        android:textColor="#69e1ff"
        android:textSize="18sp" />

    <Button
        android:text="@string/buttonRad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:layout_alignTop="@+id/buttC"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttRad"
        android:background="#0294d3"
        android:textColor="#69e1ff"
        android:textSize="18sp" />

    <Button
        android:text="@string/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/buttDel"
        android:layout_alignBaseline="@+id/buttRad"
        android:layout_alignBottom="@+id/buttRad"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#0294d3"
        android:textColor="#69e1ff"
        android:textSize="18sp" />

    <Button
        android:text="@string/buttonSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/butt7"
        android:background="#00a9f1"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_below="@+id/buttC"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="9dp" />

    <Button
        android:text="@string/buttonFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/butt4"
        android:background="#00a9f1"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_below="@+id/butt7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/buttonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/butt1"
        android:background="#00a9f1"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_below="@+id/butt4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/buttonZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/butt0"
        android:background="#00a9f1"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_below="@+id/butt1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="9dp" />

    <Button
        android:text="@string/buttonEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/butt8"
        android:background="#00a9f1"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/butt7"
        android:layout_alignBottom="@+id/butt7"
        android:layout_alignLeft="@+id/buttRad"
        android:layout_alignStart="@+id/buttRad" />

    <Button
        android:text="@string/buttonFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/butt5"
        android:background="#00a9f1"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/butt4"
        android:layout_alignBottom="@+id/butt4"
        android:layout_alignLeft="@+id/butt8"
        android:layout_alignStart="@+id/butt8" />

    <Button
        android:text="@string/buttonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/butt2"
        android:background="#00a9f1"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/butt1"
        android:layout_alignBottom="@+id/butt1"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/buttonDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/buttDec"
        android:background="#00a9f1"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/butt0"
        android:layout_alignBottom="@+id/butt0"
        android:layout_alignLeft="@+id/butt2"
        android:layout_alignStart="@+id/butt2" />

    <Button
        android:text="@string/buttonNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/butt9"
        android:background="#00a9f1"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/butt8"
        android:layout_alignBottom="@+id/butt8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/buttonSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/butt6"
        android:background="#00a9f1"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/butt5"
        android:layout_alignBottom="@+id/butt5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/buttonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/butt3"
        android:minWidth="120dp"
        android:background="#00a9f1"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/butt2"
        android:layout_alignBottom="@+id/butt2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:id="@+id/buttE"
        android:background="#0294d3"
        android:textColor="#69e1ff"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/buttDec"
        android:layout_alignBottom="@+id/buttDec"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@android:color/darker_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/butt6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="136dp"
        android:layout_marginStart="136dp"
        android:id="@+id/textView2" />

</RelativeLayout>